--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- START THE CONTENT FOR THE VIDEO -->
       <div class="col-md-6 intros text-end">
         <div class="video-box">
-          <img src="c:\Users\RABIN B\Pictures\naveenkumar.png" alt="" class="img-fluid" style="height: 400px; width: 400px; border-radius: 500px; border: 5px solid;" >
+          <img src="image/naveenkumar.png" alt="" class="img-fluid" style="height: 400px; width: 400px; border-radius: 500px; border: 5px solid;" >
           <a href="#" class=" ">
             <span>
               <i class="fas fa-play-circle"></i>
@@ -100,32 +100,32 @@
       <div class="row">
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="campany-1.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid">
+            <img src="image/campany-1.png" alt="Campany 1 logo" title="Campany 1 Logo" class="img-fluid">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="campany-2.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid">
+            <img src="image/campany-2.png" alt="Campany 2 logo" title="Campany 2 Logo" class="img-fluid">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="campany-3.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid">
+            <img src="image/campany-3.png" alt="Campany 3 logo" title="Campany 3 Logo" class="img-fluid">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="campany-4.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid">
+            <img src="image/campany-4.png" alt="Campany 4 logo" title="Campany 4 Logo" class="img-fluid">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="campany-5.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid">
+            <img src="image/campany-5.png" alt="Campany 5 logo" title="Campany 5 Logo" class="img-fluid">
           </div>
         </div>
         <div class="col-md-4 col-lg-2">
           <div class="campanies__logo-box shadow-sm">
-            <img src="campany-6.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
+            <img src="image/campany-6.png" alt="Campany 6 logo" title="Campany 6 Logo" class="img-fluid">
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
         <div class="services__pic">
-          <img src="service-1.png" alt="marketing illustration" class="img-fluid">
+          <img src="image/service-1.png" alt="marketing illustration" class="img-fluid">
         </div>
       </div>
     </div>
@@ -226,7 +226,7 @@
        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
          <div class="services__pic">
          </div>
-        <img src="service-2.png" alt="cloud hosting illustration" class="img-fluid">
+        <img src="image/service-2.png" alt="cloud hosting illustration" class="img-fluid">
       </div>
     </div>
   </div>
@@ -489,7 +489,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="photo 2.png" alt="portfolio 2 image" title="portfolio 2 picture" class="img-fluid">
+          <img src="image/photo 2.png" alt="portfolio 2 image" title="portfolio 2 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>Using all </h4>
