--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="photo 1 (2).jpg" alt="portfolio 1 image" title="portfolio 1 picture" class="img-fluid">
+          <img src="image/photo 1 (2).jpg" alt="portfolio 1 image" title="portfolio 1 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>Intenship certificate</h4>
@@ -500,7 +500,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="photo 3.jpg" alt="portfolio 3 image" title="portfolio 3 picture" class="img-fluid">
+          <img src="image/photo 3.jpg" alt="portfolio 3 image" title="portfolio 3 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>father of python</h4>
@@ -511,7 +511,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="photo 4.jpg" alt="portfolio 4 image" title="portfolio 4 picture" class="img-fluid">
+          <img src="image/photo 4.jpg" alt="portfolio 4 image" title="portfolio 4 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>python project</h4>
@@ -522,7 +522,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="photo 5.jpg" alt="portfolio 5 image" title="portfolio 5 picture" class="img-fluid">
+          <img src="image/photo 5.jpg" alt="portfolio 5 image" title="portfolio 5 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>father of java</h4>
@@ -533,7 +533,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="photo 6.jpg" alt="portfolio 6 image" title="portfolio 6 picture" class="img-fluid">
+          <img src="image/photo 6.jpg" alt="portfolio 6 image" title="portfolio 6 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>Technology</h4>
@@ -544,7 +544,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="photo 7.webp" alt="portfolio 7 image" title="portfolio 7 picture" class="img-fluid">
+          <img src="image/photo 7.webp" alt="portfolio 7 image" title="portfolio 7 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>father of html</h4>
@@ -555,7 +555,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="photo 8.jpg" alt="portfolio 8 image" title="portfolio 8 picture" class="img-fluid">
+          <img src="image/photo 8.jpg" alt="portfolio 8 image" title="portfolio 8 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>project </h4>
@@ -566,7 +566,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="photo 9.jpg" alt="portfolio 9 image" title="portfolio 9 picture" class="img-fluid">
+          <img src="image/image/photo 9.jpg" alt="portfolio 9 image" title="portfolio 9 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>logo of</h4>
