--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             </div>
             <!-- client picture  -->
             <div class="testimonials__picture">
-              <img src="c:\Users\ELCOT\Desktop\portpolio\portpolio\project photo\service-2.png" alt="client-2 picture" class="rounded-circle img-fluid">
+              <img src="image/service-2.png" alt="client-2 picture" class="rounded-circle img-fluid">
             </div>
             <!-- client name & role  -->
             <div class="testimonials__name">
@@ -566,7 +566,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="image/image/photo 9.jpg" alt="portfolio 9 image" title="portfolio 9 picture" class="img-fluid">
+          <img src="image/photo 9.jpg" alt="portfolio 9 image" title="portfolio 9 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
               <h4>logo of</h4>
