--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
         <div class="services__pic">
-          <img src="service-2.png" alt="web development illustration" class="img-fluid">
+          <img src="image/service-2.png" alt="web development illustration" class="img-fluid">
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
