--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- START THE CONTENT FOR THE VIDEO -->
       <div class="col-md-6 intros text-end">
         <div class="video-box">
-          <img src="image/naveenkumar.png" alt="" class="img-fluid" style="height: 400px; width: 400px; border-radius: 500px; border: 5px solid;" >
+          <img src="image/naveen.png" alt="" class="img-fluid" style="height: 400px; width: 400px; border-radius: 500px; border: 5px solid;" >
           <a href="#" class=" ">
             <span>
               <i class="fas fa-play-circle"></i>
